hashed path option worker for loading

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,7 @@
             "type": "node",
             "request": "attach",
             "name": "Attach to Json Server",
+            "autoAttachChildProcesses": true,
             "address": "127.0.0.1",
             "port": 29221
         },
